--- a/views/login.ejs
+++ b/views/login.ejs
@@ -53,8 +53,20 @@
     input[type="submit"]:hover {
         background-color: #0055aa;
     }
-</style>
 
+    header {
+        background-color: #0066cc;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+    }
+    
+</style>
+<header>
+    Login Form
+</header>
 <form action="/login" method="POST">
     <h2>Login</h2>
 
