--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -54,8 +54,19 @@
     input[type="submit"]:hover {
         background-color: #0055aa;
     }
-</style>
 
+    header {
+        background-color: #0066cc;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+    }
+</style>
+<header>
+    Signup Form
+</header>
 <form action="/signup" method="POST">
     <h2>Signup</h2>
     <label for="username">Username:</label>
