--- a/public/styles.css
+++ b/public/styles.css
@@ -62,12 +62,14 @@ nav a {
 }
 
 footer {
-  color: #777;
-  text-align: center;
-  /* margin: 30px auto 20px;
+  /* background-color: #0066cc; */
+  color: black;
   padding: 10px;
-  display: block; */
-  margin-top: 47vh;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 10vh;
+  
 }
 
 h2 {
